# crisp

./: README.md
driver/: interface.py  midi.py  mock.py  requirements.txt
firmware/: firmware.ino
visualizer/: Cargo.toml
visualizer/src/: bar.rs  lib.rs  midi.rs  render.rs
