[package]
name = "visualizer"
version = "0.1.0"
authors = ["claby2 <wibow9770@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "visualizer"
path = "src/bin/main.rs"

[dependencies]
midir = "0.7.0"
sdl2 = "0.34.3"
